# samesh

./: README.md  mesh_samesh.py  pyproject.toml
configs/: mesh_segmentation.yaml
data/: mesh_face.ply
sam2/: automatic_mask_generator.py
src/samesh/models/: sam_mesh.py  shape_diameter_function.py
src/samesh/renderer/: renderer.py
src/samesh/utils/: polyhedra.py  timer.py
